# eec289q_fa25_project

./: .gitignore  README.md  boolean_network_generation.py  boolean_network_generation_adam.py  dfs_pseudocode.txt  ilp_mapping.py  main.py  pyproject.toml  test_script.py  util.py
filter-benchmarks/analog-filters-table-7/: Table 7 - Quantized Coefficient Summary.docx
filter-benchmarks/analog-filters-table-7/coeffs/: filter11-coeff.txt  filter4-coeff.txt  filter8-coeff.txt
filter-benchmarks/analog-filters-table-7/filter11/: filter11.m
filter-benchmarks/analog-filters-table-7/filter4/: filter4.m
filter-benchmarks/analog-filters-table-7/filter8/: filter8.m
filter-benchmarks/remez-filters-table-2/: Table 2 - Quantized Coefficients Summary.docx
filter-benchmarks/remez-filters-table-2/coeffs/: filter1-coeff.txt  filter2-coeff.txt  filter3-coeff.txt  filter4-coeff.txt  filter5-coeff.txt  filter6-coeff.txt  filter7-coeff.txt  filter8-coeff.txt  filter9-coeff.txt
filter-benchmarks/remez-filters-table-2/filter1/: filter1.asv  filter1.m
filter-benchmarks/remez-filters-table-2/filter2/: filter2.m
filter-benchmarks/remez-filters-table-2/filter3/: filter3.m
filter-benchmarks/remez-filters-table-2/filter4/: filter4.m
filter-benchmarks/remez-filters-table-2/filter5/: filter5.m
filter-benchmarks/remez-filters-table-2/filter6/: filter6.m
filter-benchmarks/remez-filters-table-2/filter7/: filter7.m
filter-benchmarks/remez-filters-table-2/filter8/: filter8.m
filter-benchmarks/remez-filters-table-2/filter9/: filter9.m
(+5 files in other folders)
